--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,8 @@
 title: Emily O'Riordan
 email: emily@bodekerscientific.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  90% AI with a chance of meteorology.
+gems: ["jemoji"]
 baseurl: "/oriordanemily/" # the subpath of your site, e.g. /blog
 url: "https://oriordanemily.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
